# dubiousdiscord

./: .gitignore  .readthedocs.yaml  pyproject.toml  setup.cfg
sphinx/: conf.py
src/dubious/: callback.py  pory.py  zap.py
src/dubious/discord/: disc.py
