[metadata]
name = dubiousdiscord
description = A complete Discord API wrapper focused on using Discord Interactions en tandem with Flask.
author = lapras
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.11 :: Only

[options]
install_requires =
    requests
    flask
    pynacl
python_requires = >=3.10
package_dir =
    =src
zip_safe = no